# forkvelox

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  TODO.md  justfile  prompts.md
data/: multi_split_1.rv  multi_split_2.rv  sample.csv  sample.fvx
docs/: driver.md  dynamic_loading.md  exec_pipeline.md  expression.md  fvx_format.md  vector.md
examples/: AggregationStep.cpp  CMakeLists.txt  CancellationRequeue.cpp  DynamicLoading.cpp  FilterLambda.cpp  MultiSplitScan.cpp  OrderByPartialFinal.cpp  PipelineSplit.cpp  ScanAndSort.cpp  ScanCsv.cpp  ScanFvx.cpp  SerialNext.cpp  TaskParallel.cpp  TpchQ1.cpp  TpchQ6.cpp  TransformLambda.cpp  TwoHashJoin.cpp  VectorReaderWriter.cpp  VeloxIn10Min.cpp
examples/dynamic/: DynamicFunction.cpp
minivelox/: CMakeLists.txt  README.md  test_build.cpp
minivelox/buffer/: Buffer.cpp  Buffer.h
minivelox/common/base/: Exceptions.h
minivelox/common/memory/: Memory.cpp  Memory.h
minivelox/core/: Context.h
minivelox/demo/: VeloxIn10MinDemo.cpp
minivelox/exec/: Driver.cpp  Driver.h  Expr.cpp  Expr.h  Function.h  Operator.cpp  Operator.h  Operators.cpp  Operators.h  PlanNode.cpp  PlanNode.h  Split.h  Task.cpp  Task.h
minivelox/exec/tests/utils/: AssertQueryBuilder.h  PlanBuilder.h
minivelox/folly/init/: Init.h
minivelox/functions/: Functions.cpp  Registration.h
minivelox/parse/: Expressions.cpp  Expressions.h
minivelox/type/: StringView.h  Type.cpp  Type.h  Variant.h
minivelox/vector/: BaseVector.cpp  BaseVector.h  RowVector.cpp  RowVector.h  SelectivityVector.h  SimpleVector.cpp  SimpleVector.h  TypeAliases.h
minivelox/velox/common/base/: BitUtil.h  Exceptions.h
minivelox/velox/common/memory/: Memory.cpp  MemoryAllocator.h  MemoryPool.h
minivelox/velox/core/: ExecCtx.h  Expressions.h  ITypedExpr.h  PlanNode.h
minivelox/velox/exec/: Driver.h  ExecutionDriver.h  Operator.h  Split.h
minivelox/velox/exec/tests/utils/: AssertQueryBuilder.h  PlanBuilder.h
minivelox/velox/expression/: EvalCtx.h  Expr.cpp  Expr.h  VectorFunction.h
minivelox/velox/functions/prestosql/: Arithmetic.cpp
minivelox/velox/functions/prestosql/registration/: RegistrationFunctions.h
minivelox/velox/parse/: ExpressionsParser.h  TypeResolver.h
minivelox/velox/type/: StringView.h  Type.h  Variant.h
minivelox/velox/vector/: BaseVector.h  ComplexVector.h  FlatVector.h  SelectivityVector.h  SimpleVector.h  VectorEncoding.h
minivelox/velox/vector/tests/utils/: VectorTestBase.h
src/: CMakeLists.txt
src/demo/: CancellationRequeueDemo.cpp  MultiSplitScanDemo.cpp  OrderByPartialFinalDemo.cpp  PipelineSplitDemo.cpp  ScanAndSortDemo.cpp  ScanCsvDemo.cpp  TaskParallelDemo.cpp  TwoHashJoinDemo.cpp  VeloxIn10MinDemo.cpp
src/examples/: AggregationStep.cpp  CMakeLists.txt  FilterLambda.cpp  MultiSplitScan.cpp  OrderByPartialFinal.cpp  PipelineSplit.cpp  PipelineSplitDemo.cpp  ScanAndSort.cpp  ScanCsv.cpp  ScanFvx.cpp  TaskParallel.cpp  TransformLambda.cpp  TwoHashJoin.cpp  TwoHashJoinDemo.cpp  VectorReaderWriter.cpp  VeloxIn10Min.cpp
src/folly/: Executor.h  Range.h
src/folly/container/: F14Map.h
src/folly/executors/: CPUThreadPoolExecutor.h
src/folly/futures/: Future.h
src/folly/init/: Init.h
src/folly/io/: IOBuf.h
src/folly/synchronization/: CallOnce.h
src/folly/system/: HardwareConcurrency.h
src/velox/buffer/: Buffer.h
src/velox/common/: Tree.h
src/velox/common/async/: Async.h
src/velox/common/base/: BitUtil.h  Exceptions.h  IntrusivePtr.h  Log.cpp  Log.h  RuntimeMetrics.h
src/velox/common/dynamic_registry/: DynamicLibraryLoader.cpp  DynamicLibraryLoader.h
src/velox/common/file/: File.cpp  File.h  FileIoTracer.h  FileSystem.h  FileSystems.cpp  FileSystems.h  LocalFileSystem.cpp  LocalFileSystem.h  Region.h  TokenProvider.h
src/velox/common/io/: IoStatistics.h  IoUringExecutor.cpp  IoUringExecutor.h
src/velox/common/memory/: Memory.cpp  Memory.h  MemoryAllocator.h  MemoryPool.h
src/velox/connectors/tpch/: TpchConnector.h  TpchConnectorSplit.h
src/velox/core/: ExecCtx.h  ExecutionRuntime.cpp  ExecutionRuntime.h  Expressions.h  ITypedExpr.h  PlanFragment.h  PlanNode.h  QueryConfig.h  QueryCtx.h
src/velox/dwio/common/: Reader.h  ReaderFactory.cpp  ReaderFactory.h  RowVectorFile.cpp  RowVectorFile.h
src/velox/dwio/csv/: CsvReader.cpp  CsvReader.h  RegisterCsvReader.cpp  RegisterCsvReader.h
src/velox/dwio/fvx/: FvxReader.cpp  FvxReader.h  FvxWriter.cpp  FvxWriter.h  RegisterFvxReader.cpp  RegisterFvxReader.h
src/velox/exec/: BlockingReason.h  Driver.h  LocalExchange.cpp  LocalExchange.h  LocalPlanner.cpp  LocalPlanner.h  Operator.h  PlanNodeStats.cpp  PlanNodeStats.h  Split.h  Task.cpp  Task.h  TaskStats.h
src/velox/exec/tests/utils/: AssertQueryBuilder.h  PlanBuilder.h
src/velox/expression/: EvalCtx.h  Expr.cpp  Expr.h  FunctionRegistry.cpp  FunctionRegistry.h  LambdaExpr.cpp  LambdaExpr.h  VectorFunction.h
src/velox/functions/: Arithmetic.cpp  Comparison.cpp  LambdaFunctions.cpp  StringFunctions.cpp
src/velox/functions/aggregates/: AggregateFunction.cpp  AggregateFunction.h  RegisterAggregateFunctions.cpp  RegisterAggregateFunctions.h
src/velox/functions/prestosql/: Comparison.cpp  StringFunctions.cpp
src/velox/functions/prestosql/aggregates/: RegisterAggregateFunctions.h
src/velox/functions/prestosql/registration/: RegistrationFunctions.cpp  RegistrationFunctions.h
src/velox/functions/registration/: RegistrationFunctions.cpp  RegistrationFunctions.h
src/velox/io/: CsvReader.cpp  CsvReader.h  RowVectorFile.cpp  RowVectorFile.h
src/velox/parse/: Expressions.h  ExpressionsParser.h  TypeResolver.h
src/velox/type/: StringView.h  Type.h  Variant.h
src/velox/vector/: BaseVector.cpp  BaseVector.h  ComplexVector.h  FlatVector.h  FunctionVector.h  SelectivityVector.h  SimpleVector.h  VectorEncoding.h
src/velox/vector/tests/utils/: VectorTestBase.h
